Add chart for request count per day
