# api/docs/swagger.json
@@ -600,6 +600,12 @@
             "in": "query"
           },
           {
+            "type": "string",
+            "description": "ID of the first request returned in the current page",
+            "name": "next",
+            "in": "query"
+          },
+          {
             "maximum": 100,
             "minimum": 1,
             "type": "integer",
@@ -699,6 +705,121 @@
             "description": "Not Found",
             "schema": {
               "$ref": "#/definitions/responses.NotFound"
+            }
+          },
+          "422": {
+            "description": "Unprocessable Entity",
+            "schema": {
+              "$ref": "#/definitions/responses.UnprocessableEntity"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/responses.InternalServerError"
+            }
+          }
+        }
+      }
+    },
+    "/v1/projects/{projectId}/endpoints/{projectEndpointId}/traffic": {
+      "get": {
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "description": "This endpoint returns the time series traffic for a endpoint in the last 30 days.",
+        "produces": ["application/json"],
+        "tags": ["ProjectEndpoints"],
+        "summary": "Get project traffic",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "Project ID",
+            "name": "projectId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "description": "Project Endpoint ID",
+            "name": "projectEndpointId",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/responses.Ok-array_repositories_TimeSeriesData"
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/definitions/responses.BadRequest"
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "$ref": "#/definitions/responses.Unauthorized"
+            }
+          },
+          "422": {
+            "description": "Unprocessable Entity",
+            "schema": {
+              "$ref": "#/definitions/responses.UnprocessableEntity"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/responses.InternalServerError"
+            }
+          }
+        }
+      }
+    },
+    "/v1/projects/{projectId}/traffic": {
+      "get": {
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "description": "This endpoint returns the time series traffic for all project endpoints in the last 30 days.",
+        "produces": ["application/json"],
+        "tags": ["Projects"],
+        "summary": "Get project traffic",
+        "parameters": [
+          {
+            "type": "string",
+            "description": "Project ID",
+            "name": "projectId",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/responses.Ok-array_repositories_TimeSeriesData"
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/definitions/responses.BadRequest"
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "$ref": "#/definitions/responses.Unauthorized"
             }
           },
           "422": {
@@ -914,6 +1035,18 @@
         }
       }
     },
+    "repositories.TimeSeriesData": {
+      "type": "object",
+      "required": ["count", "timestamp"],
+      "properties": {
+        "count": {
+          "type": "integer"
+        },
+        "timestamp": {
+          "type": "string"
+        }
+      }
+    },
     "requests.ProjectCreateRequest": {
       "type": "object",
       "required": ["description", "name", "subdomain"],
@@ -1122,6 +1255,26 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/entities.ProjectEndpointRequest"
+          }
+        },
+        "message": {
+          "type": "string",
+          "example": "Request handled successfully"
+        },
+        "status": {
+          "type": "string",
+          "example": "success"
+        }
+      }
+    },
+    "responses.Ok-array_repositories_TimeSeriesData": {
+      "type": "object",
+      "required": ["data", "message", "status"],
+      "properties": {
+        "data": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/repositories.TimeSeriesData"
           }
         },
         "message": {
