# api/pkg/repositories/gorm_project_endpoint_request_repository.go
@@ -4,6 +4,8 @@ import (
 	"context"
 	"errors"
 	"fmt"
+	"sort"
+	"time"
 
 	"github.com/google/uuid"
 	"github.com/oklog/ulid/v2"
@@ -32,6 +34,46 @@ func NewGormProjectEndpointRequestRepository(
 		tracer: tracer,
 		db:     db,
 	}
+}
+
+func (repository *gormProjectEndpointRequestRepository) GetProjectTraffic(ctx context.Context, userID entities.UserID, projectID uuid.UUID) ([]*TimeSeriesData, error) {
+	ctx, span := repository.tracer.Start(ctx)
+	defer span.End()
+
+	data := new([]*TimeSeriesData)
+	err := repository.db.WithContext(ctx).Model(entities.ProjectEndpointRequest{}).
+		Select("date_trunc('day', created_at)::date AS timestamp, COUNT(*) AS count").
+		Where("user_id = ?", userID).
+		Where("project_id = ?", projectID.String()).
+		Where(gorm.Expr("created_at >= current_date - interval '30 days'")).
+		Group("timestamp").
+		Find(&data).Error
+	if err != nil {
+		msg := fmt.Sprintf("cannot load project traffic for user with ID [%s] and project ID [%s]", userID, projectID)
+		return nil, repository.tracer.WrapErrorSpan(span, stacktrace.Propagate(err, msg))
+	}
+
+	return repository.normalizeTimeSeries(*data), nil
+}
+
+func (repository *gormProjectEndpointRequestRepository) GetEndpointTraffic(ctx context.Context, userID entities.UserID, endpointID uuid.UUID) ([]*TimeSeriesData, error) {
+	ctx, span := repository.tracer.Start(ctx)
+	defer span.End()
+
+	data := new([]*TimeSeriesData)
+	err := repository.db.WithContext(ctx).Model(entities.ProjectEndpointRequest{}).
+		Select("date_trunc('day', created_at)::date AS timestamp, COUNT(*) AS count").
+		Where("user_id = ?", userID).
+		Where("project_endpoint_id = ?", endpointID.String()).
+		Where(gorm.Expr("created_at >= current_date - interval '30 days'")).
+		Group("timestamp").
+		Find(&data).Error
+	if err != nil {
+		msg := fmt.Sprintf("cannot load project endpoint traffic for user with ID [%s] and project endpoint ID [%s]", userID, endpointID)
+		return nil, repository.tracer.WrapErrorSpan(span, stacktrace.Propagate(err, msg))
+	}
+
+	return repository.normalizeTimeSeries(*data), nil
 }
 
 func (repository *gormProjectEndpointRequestRepository) Index(ctx context.Context, userID entities.UserID, endpointID uuid.UUID, limit uint, previousID *ulid.ULID, nextID *ulid.ULID) ([]*entities.ProjectEndpointRequest, error) {
@@ -101,4 +143,37 @@ func (repository *gormProjectEndpointRequestRepository) Store(ctx context.Contex
 	}
 
 	return nil
+}
+
+func (repository *gormProjectEndpointRequestRepository) generateTimeSeries() map[string]*TimeSeriesData {
+	series := make(map[string]*TimeSeriesData)
+	for i := 0; i < 30; i++ {
+		date := time.Now().UTC().AddDate(0, 0, -i)
+		series[date.Format("2006-01-02")] = &TimeSeriesData{
+			Timestamp: time.Date(date.Year(), date.Month(), date.Day(), 0, 0, 0, 0, time.UTC).AddDate(0, 0, -i),
+			Count:     0,
+		}
+	}
+	return series
+}
+
+func (repository *gormProjectEndpointRequestRepository) normalizeTimeSeries(input []*TimeSeriesData) []*TimeSeriesData {
+	series := repository.generateTimeSeries()
+	for _, data := range input {
+		date := data.Timestamp.Format("2006-01-02")
+		if _, ok := series[date]; ok {
+			series[date].Count = data.Count
+		}
+	}
+
+	var result []*TimeSeriesData
+	for _, data := range series {
+		result = append(result, data)
+	}
+
+	sort.Slice(result, func(i, j int) bool {
+		return result[i].Timestamp.Before(result[j].Timestamp)
+	})
+
+	return result
 }
